force-app/main/default/objects/Employee__c/Employee__c.object-meta.xml
<CustomObject>
    <description>Employee master record for SFA field force management. Links to Salesforce User for authentication while storing extended employee attributes, leave balances, and organizational hierarchy.</description>
    <label>Employee</label>
    <nameField>
        <displayFormat>EMP-{0000}</displayFormat>
        <label>Employee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>