force-app/main/default/objects/Employee__c/fields/CL_Balance__c.field-meta.xml
<CustomField>
    <fullName>CL_Balance__c</fullName>
    <label>Casual Leave Balance</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
    <defaultValue>12</defaultValue>
</CustomField>