force-app/main/default/objects/Employee__c/fields/CO_Balance__c.field-meta.xml
<CustomField>
    <fullName>CO_Balance__c</fullName>
    <label>Comp Off Balance</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
    <defaultValue>0</defaultValue>
</CustomField>