force-app/main/default/objects/Employee__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Sales</fullName><default>true</default><label>Sales</label></value>
            <value><fullName>Marketing</fullName><default>false</default><label>Marketing</label></value>
            <value><fullName>Operations</fullName><default>false</default><label>Operations</label></value>
            <value><fullName>Finance</fullName><default>false</default><label>Finance</label></value>
            <value><fullName>HR</fullName><default>false</default><label>HR</label></value>
            <value><fullName>IT</fullName><default>false</default><label>IT</label></value>
            <value><fullName>Supply Chain</fullName><default>false</default><label>Supply Chain</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>