force-app/main/default/objects/Employee__c/fields/EL_Balance__c.field-meta.xml
<CustomField>
    <fullName>EL_Balance__c</fullName>
    <label>Earned Leave Balance</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
    <defaultValue>15</defaultValue>
</CustomField>