force-app/main/default/objects/Employee__c/fields/Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>Employee_Code__c</fullName>
    <label>Employee Code</label>
    <type>Text</type>
    <length>20</length>
    <required>true</required>
    <unique>true</unique>
    <externalId>true</externalId>
    <description>Unique employee identifier code</description>
</CustomField>