force-app/main/default/objects/Employee__c/fields/Gross_Salary__c.field-meta.xml
<CustomField>
    <fullName>Gross_Salary__c</fullName>
    <label>Gross Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Monthly gross salary used for PBIS incentive calculation. Incentive = Slab % x Gross Salary x Multiplier.</inlineHelpText>
    <description>Monthly gross salary for incentive calculation. For quarterly payouts, this is multiplied by 3. For annual, multiplied by 12.</description>
</CustomField>