force-app/main/default/objects/Employee__c/fields/L1_Approver__c.field-meta.xml
<CustomField>
    <fullName>L1_Approver__c</fullName>
    <label>L1 Approver (Manager)</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>L1 Approver For Employees</relationshipLabel>
    <relationshipName>L1_Approver_Employees</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who approves expenses at Level 1 (Manager level) for this employee</description>
</CustomField>