force-app/main/default/objects/Employee__c/fields/L2_Approver__c.field-meta.xml
<CustomField>
    <fullName>L2_Approver__c</fullName>
    <label>L2 Approver (Finance)</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>L2 Approver For Employees</relationshipLabel>
    <relationshipName>L2_Approver_Employees</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who approves expenses at Level 2 (Finance level) for this employee</description>
</CustomField>