force-app/main/default/objects/Employee__c/fields/Profile_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Profile_Photo_URL__c</fullName>
    <label>Profile Photo URL</label>
    <type>Url</type>
</CustomField>