force-app/main/default/objects/Employee__c/fields/Reporting_Manager__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager__c</fullName>
    <label>Reporting Manager</label>
    <type>Lookup</type>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Direct Reports</relationshipLabel>
    <relationshipName>Direct_Reports</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self-referencing hierarchy for reporting structure</description>
</CustomField>