force-app/main/default/objects/Employee__c/fields/SL_Balance__c.field-meta.xml
<CustomField>
    <fullName>SL_Balance__c</fullName>
    <label>Sick Leave Balance</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
    <defaultValue>7</defaultValue>
</CustomField>