force-app/main/default/objects/Employee__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Employee Records</relationshipLabel>
    <relationshipName>Employee_Records</relationshipName>
    <required>true</required>
    <description>Linked Salesforce User account for this employee</description>
</CustomField>