force-app/main/default/objects/Employee__c/fields/Week_Off_Days__c.field-meta.xml
<CustomField>
    <fullName>Week_Off_Days__c</fullName>
    <label>Week Off Days</label>
    <description>Days of the week when this employee has a weekly off. Used by journey plan generation to skip these days.</description>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Monday</fullName><default>false</default><label>Monday</label></value>
            <value><fullName>Tuesday</fullName><default>false</default><label>Tuesday</label></value>
            <value><fullName>Wednesday</fullName><default>false</default><label>Wednesday</label></value>
            <value><fullName>Thursday</fullName><default>false</default><label>Thursday</label></value>
            <value><fullName>Friday</fullName><default>false</default><label>Friday</label></value>
            <value><fullName>Saturday</fullName><default>false</default><label>Saturday</label></value>
            <value><fullName>Sunday</fullName><default>true</default><label>Sunday</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>