force-app/main/default/objects/Employee__c/validationRules/Territory_Required_When_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Territory_Required_When_Active</fullName>
    <active>true</active>
    <description>Active employees must have a Territory so journey plans, visits, and orders can auto-inherit one when the outlet or beat doesn't specify.</description>
    <errorConditionFormula>AND(Is_Active__c, ISBLANK(Territory__c))</errorConditionFormula>
    <errorDisplayField>Territory__c</errorDisplayField>
    <errorMessage>Active employees must be assigned to a territory.</errorMessage>
</ValidationRule>